--- a/generators/react/templates/views/reactApp.ejs
+++ b/generators/react/templates/views/reactApp.ejs
@@ -9,6 +9,7 @@
     <div id="app-container">
 
     </div>
-    <script src="/js/bundle.js"></script>
+    <% var envFilename = process.env.NODE_ENV === 'production' ? 'bundle.min.js' : 'bundle.js' %>
+    <script src="/js/<%=envFilename%>"></script>
   </body>
 </html>
