--- a/generators/react/templates/views/reactApp.ejs
+++ b/generators/react/templates/views/reactApp.ejs
@@ -3,7 +3,6 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
     <title>Dev Jobs</title>
     <link rel="stylesheet" href="/css/styles.css">
   </head>
@@ -11,7 +10,7 @@
     <div id="app-container">
 
     </div>
-    <% var envFilename = process.env.NODE_ENV === 'production' ? 'bundle.min.js' : 'bundle.js' %>
-    <script src="/js/<%=envFilename%>"></script>
+    <%- <% var envFilename = process.env.NODE_ENV === 'production' ? 'bundle.min.js' : 'bundle.js' %> %>
+    <script src="/js/<%-<%=envFilename%>%>"></script>
   </body>
 </html>
